<resources>
    <string name="app_name">Happy Niglo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="IMGUR_login_url">https://api.imgur.com/oauth2/authorize?client_id=3403a352cf85672&amp;response_type=token&amp;state=APPLICATION_STATE</string>
    <string name="client_secret">d8a240d8dab961b9973a56075f5b4e30fc52a677</string>
    <string name="imgur_api_baseurl">https://api.imgur.com/3/</string>
    <string name="upload_button">Upload</string>
    <string name="account_menu">Account</string>
    <string name="logout_button">Logout</string>
    <string name="my_pictures_button">My pictures</string>
    <string name="search_button">Search</string>
    <string name="favorites_button">Favorites</string>
    <string name="image_title_placeholder">No Title</string>
    <string name="image_description_placeholder">No Description</string>
    <string name="fav_ic_desc">Press to favotite/un-favorite</string>
    <string name="querry_placeholder">Querry</string>
    <string name="search_label">Search Images</string>
    <string name="default_view_counter">0</string>
    <string name="view_counter_desc">View counter</string>
    <string name="del_ic_desc">click to delete</string>
</resources>
